website/versioned_docs/version-0.0.44/sidecar-files.md
---
sidebar_position: 130
---

# Sidecar Files

Sidecar files are JSON files that store metadata alongside your book files on disk. They let you customize metadata without modifying the original files and ensure your edits survive file moves or re-imports.

## How They Work

When you edit metadata through the Shisho interface, the changes are saved both to the database and to `.metadata.json` sidecar files next to your book files. During library scans, Shisho reads these sidecars and applies them with higher priority than embedded file metadata, so your customizations are preserved.

### File Locations

Sidecar files are created alongside your book files:

**Directory-based books:**
```
[Author] Book Title/
├── book.epub
├── book.epub.metadata.json       ← file sidecar
└── Book Title.metadata.json      ← book sidecar (named after directory)
```

**Root-level books:**
```
library/
├── Book Title.m4b
├── Book Title.m4b.metadata.json  ← file sidecar
└── Book Title.metadata.json      ← book sidecar (named after file, without extension)
```

### Two Levels of Sidecars

There are two types of sidecar files, corresponding to the two levels of [metadata](./metadata) in Shisho:

- **Book sidecars** store book-level metadata: title, authors, series, genres, tags
- **File sidecars** store file-level metadata: narrators, publisher, identifiers, chapters, language, abridged

## Book Sidecar Format

```json
{
  "version": 1,
  "title": "The Great Gatsby",
  "sort_title": "Great Gatsby, The",
  "subtitle": "A Novel",
  "description": "A story about the American Dream.",
  "authors": [
    {
      "name": "F. Scott Fitzgerald",
      "sort_name": "Fitzgerald, F. Scott",
      "sort_order": 0
    }
  ],
  "series": [
    {
      "name": "Classic American Literature",
      "number": 5,
      "unit": "volume",
      "sort_order": 0
    }
  ],
  "genres": ["Fiction", "Classic"],
  "tags": ["american-literature", "1920s"]
}
```

The `unit` field on series entries is optional and applies to CBZ files only. Valid values are `"volume"` and `"chapter"`. When omitted, CBZ files default to volume rendering. Non-CBZ files always ignore this field (it is stored as `null`).

For CBZ comics, authors can include a `role` field:

```json
{
  "authors": [
    { "name": "Alan Moore", "role": "writer" },
    { "name": "Dave Gibbons", "role": "penciller" }
  ]
}
```

Valid roles: `writer`, `penciller`, `inker`, `colorist`, `letterer`, `cover_artist`, `editor`, `translator`

## File Sidecar Format

```json
{
  "version": 1,
  "name": "Custom Display Name",
  "narrators": [
    {
      "name": "Stephen Fry",
      "sort_name": "Fry, Stephen",
      "sort_order": 0
    }
  ],
  "publisher": "Penguin Books",
  "imprint": "Penguin Classics",
  "release_date": "2004-09-30",
  "url": "https://example.com/book",
  "identifiers": [
    { "type": "isbn_13", "value": "9780743273565" },
    { "type": "asin", "value": "B000FC1GJC" }
  ],
  "chapters": [
    {
      "title": "Chapter 1",
      "start_timestamp_ms": 0,
      "children": [
        { "title": "Section 1.1", "start_timestamp_ms": 30000 }
      ]
    }
  ],
  "cover_page": 0,
  "language": "en-US",
  "abridged": true
}
```

Chapter position fields are mutually exclusive based on file type:
- **CBZ**: `start_page` (0-indexed page number)
- **M4B**: `start_timestamp_ms` (milliseconds from start)
- **EPUB**: `href` (content document reference)

The `language` field stores a BCP 47 language tag (e.g., `"en"`, `"en-US"`, `"zh-Hans"`).

The `abridged` field is a nullable boolean: `true` (abridged), `false` (unabridged), or omitted (unknown).

## Priority System

Sidecar metadata sits between manual edits and embedded file metadata in the priority hierarchy:

| Priority | Source |
|----------|--------|
| Highest | Manual edits (web interface) |
| | **Sidecar files** |
| | [Plugin](./plugins/overview) data |
| | Embedded file metadata |
| Lowest | Filepath |

This means:
- Sidecar values **override** embedded file metadata and filepath-derived data
- Manual edits through the interface **override** sidecar values
- When you make a manual edit, the sidecar is also updated to stay in sync

### Rescanning and Sidecars

The **Rescan** dialog on a book or file offers three modes that interact with sidecars differently:

- **Scan for new metadata** — Reads file metadata and runs plugins. Sidecar values are applied as usual according to the priority system. Won't overwrite manual edits. If the underlying file has been replaced on disk (its size or modification time differs from what was last scanned), the cached file sidecar is dropped first so the new file's metadata takes effect instead of being masked by the old sidecar.
- **Refresh all metadata** — Re-reads file metadata and runs plugins, bypassing the priority system. Cached sidecars are dropped before the scan runs so re-derivation actually takes effect; manual edits stored in the database are still subject to being overwritten by the fresh scan since this mode bypasses priority. The sidecar is rewritten from the new state at the end of the scan.
- **Reset to file metadata** — Re-reads only the metadata embedded in the source file(s), skipping plugins. Cached sidecars are dropped along with the rest of the prior metadata state. Use this when plugin enrichment has matched incorrectly and you want to start fresh with just what's in the file.

## When Sidecars Are Read

Sidecar files are read during library scans, after parsing the embedded file metadata. If a sidecar exists, its values are applied according to the priority system.

Resource names in sidecars — authors, narrators, series, genres, tags, publishers, and imprints — are resolved through Shisho's standard name lookup, which checks [aliases](./metadata#aliases). If a name in a sidecar matches an alias, it resolves to the existing canonical resource instead of creating a duplicate. No changes to the sidecar format are needed to take advantage of aliases.

## When Sidecars Are Written

Sidecar files are automatically written whenever you edit metadata through the Shisho interface. This keeps the on-disk sidecars in sync with the database, so the customizations persist if you ever need to re-scan or move your library.

All fields in the sidecar are optional — only fields with values are included.
